[gd_scene load_steps=15 format=2]

[ext_resource path="res://SpaceElements/Characters/Allies/RadarShip/RadarShip.png" type="Texture" id=1]
[ext_resource path="res://Effects/Shield/Shield.tscn" type="PackedScene" id=2]
[ext_resource path="res://UI/ProgressBar/SpaceProgressBar.tscn" type="PackedScene" id=3]
[ext_resource path="res://SpaceElements/Characters/Allies/RadarShip/Radar.png" type="Texture" id=4]
[ext_resource path="res://SpaceElements/Characters/Allies/RadarShip/RadarShip.gd" type="Script" id=5]
[ext_resource path="res://SpaceElements/Characters/Player/fire.png" type="Texture" id=6]
[ext_resource path="res://SpaceElements/Characters/Allies/RadarShip/sonar.wav" type="AudioStream" id=7]
[ext_resource path="res://Effects/HaloCircle/HaloCircle.tscn" type="PackedScene" id=8]

[sub_resource type="CircleShape2D" id=1]
radius = 56.5685

[sub_resource type="CircleShape2D" id=2]
radius = 1432.09

[sub_resource type="CircleShape2D" id=5]
radius = 192.666

[sub_resource type="CircleShape2D" id=6]
radius = 72.4431

[sub_resource type="Animation" id=7]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("CollisionShape2D:disabled")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ false ]
}

[sub_resource type="Animation" id=8]
resource_name = "blink"
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2, 0.5, 0.7, 1 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 0, 0.0705882, 1 ), Color( 1, 1, 1, 1 ), Color( 1, 0, 0.0705882, 1 ), Color( 1, 1, 1, 1 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("CollisionShape2D:disabled")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ true, false ]
}

[node name="RadarShip" type="KinematicBody2D" groups=["ally", "radar"]]
script = ExtResource( 5 )
speed = 280.0
drag = 15.0
energy_consume = 8
energy_reserve = 18
max_speed = 320
max_life = 30
limit_distance = 250

[node name="Sprite" type="Sprite" parent="."]
scale = Vector2( 0.2, 0.2 )
texture = ExtResource( 1 )

[node name="Fire" type="Node2D" parent="Sprite"]

[node name="Fire1" type="Sprite" parent="Sprite/Fire"]
position = Vector2( -80, 390 )
scale = Vector2( 0.2, 0.2 )
texture = ExtResource( 6 )

[node name="Fire2" type="Sprite" parent="Sprite/Fire"]
position = Vector2( 80, 390 )
scale = Vector2( 0.2, 0.2 )
texture = ExtResource( 6 )

[node name="Radar" type="Sprite" parent="Sprite"]
position = Vector2( 0, 160 )
texture = ExtResource( 4 )
region_enabled = true
region_rect = Rect2( 112.606, 290, 459.754, 463.071 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0, 8 )
shape = SubResource( 1 )
__meta__ = {
"_edit_group_": true,
"_edit_lock_": true
}

[node name="Shield" parent="." instance=ExtResource( 2 )]
visible = false
position = Vector2( 2.95639e-05, 4 )
scale = Vector2( 1.875, 1.8125 )

[node name="ShieldBar" parent="Shield" index="0"]
margin_left = -13.0
margin_top = -66.0
margin_right = 13.0
margin_bottom = -57.0

[node name="Life" parent="." instance=ExtResource( 3 )]
margin_top = -96.0
margin_bottom = -82.0
max_value = 8.0
value = 8.0

[node name="DetectionZone" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 8
monitorable = false
__meta__ = {
"_edit_group_": true,
"_edit_lock_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="DetectionZone"]
shape = SubResource( 2 )

[node name="RadarDirection" type="Node2D" parent="."]

[node name="HaloCircle" parent="." instance=ExtResource( 8 )]
scale = Vector2( 1e-05, 1e-05 )

[node name="ObjectArea" type="Area2D" parent="."]
collision_layer = 129
collision_mask = 0
__meta__ = {
"_edit_lock_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="ObjectArea"]
modulate = Color( 1, 0.0431373, 0.0431373, 1 )
shape = SubResource( 5 )
__meta__ = {
"_edit_lock_": true
}

[node name="CollisionZone" type="Area2D" parent="."]
collision_layer = 0
__meta__ = {
"_edit_lock_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="CollisionZone"]
modulate = Color( 0.203922, 0.921569, 0.027451, 1 )
shape = SubResource( 6 )

[node name="Tween" type="Tween" parent="."]

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
pause_mode = 2
anims/RESET = SubResource( 7 )
anims/blink = SubResource( 8 )

[node name="ShootTimer" type="Timer" parent="."]
wait_time = 5.0
autostart = true

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 7 )

[connection signal="body_entered" from="CollisionZone" to="." method="_on_CollisionZone_body_entered"]
[connection signal="body_exited" from="CollisionZone" to="." method="_on_CollisionZone_body_exited"]
[connection signal="tween_all_completed" from="Tween" to="." method="_on_Tween_tween_all_completed"]
[connection signal="timeout" from="ShootTimer" to="." method="_on_RadarTimer_timeout"]

[editable path="Shield"]
